src/test/deca/context/valid/created/decl_var.deca
//Programme pour tester les affectations

{
int a = 3;
int b = 2
int c = b;
float f = 0.2;
bool d = true;
}