src/test/deca/context/invalid/created/decl_bool_eq_float.deca
{
bool a = 0.5; //0.5 n'est pas un bool
}